--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <ul class="navbar-nav">
                         <li><a class="nav-link active" href="index.html">Home</a></li>
                         <li><a class="nav-link" href="about.html">About</a></li>
-                        <li><a class="nav-link" href="exchange.html">Exchange</a></li>
+                        <li><a class="nav-link" href="exchange.html">TaxBazaar</a></li>
                         <li><a class="nav-link" href="services.html">Services</a></li>
                         <li><a class="nav-link" href="new.html">News</a></li>
                         <li><a class="nav-link" href="contact.html">Contact</a></li>
@@ -118,7 +118,7 @@
                                     <div class="slide_text white_fonts">
                                         <h3>Progress & Success<br><strong>Currency</strong></h3>
                                         <br>
-                                        <a class="start_exchange_bt" href="exchange.html">Start Exchange ></a>
+                                        <a class="start_exchange_bt" href="exchange.html">Save Tax ></a>
                                     </div>
                                 </div>
                             </div>
@@ -131,7 +131,7 @@
                                     <div class="slide_text white_fonts">
                                         <h3>Progress & Success<br><strong>Currency</strong></h3>
                                         <br>
-                                        <a class="start_exchange_bt" href="exchange.html">Start Exchange ></a>
+                                        <a class="start_exchange_bt" href="exchange.html">Save Tax ></a>
                                     </div>
                                 </div>
                             </div>
@@ -156,7 +156,7 @@
                 <div class="col-md-6 layout_padding">
                     <div class="full paddding_left_15">
                         <div class="heading_main text_align_left">
-						   <h2><span class="theme_color">Welcome</span> To Exchange</h2>	
+						   <h2><span class="theme_color">Welcome</span> To TaxBazaar/h2>	
                         </div>
                     </div>
                     <div class="full paddding_left_15">
@@ -186,25 +186,25 @@
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="full services_blog">
                        <img class="img-responsive" src="images/s1.png" alt="#" />
-                       <h4>Safe & Secure</h4>
+                       <h4>GST & ITR</h4>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="full services_blog">
                         <img class="img-responsive" src="images/s2.png" alt="#" />
-                        <h4>Mobile Apps</h4>
+                        <h4>PAN CARD</h4>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="full services_blog">
                         <img class="img-responsive" src="images/s3.png" alt="#" />
-                        <h4>Wallet</h4>
+                        <h4>BOOKEEPING</h4>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="full services_blog">
                         <img class="img-responsive" src="images/s4.png" alt="#" />
-                        <h4>Experts Support</h4>
+                        <h4>E-COMMERCE ACCOUNTING</h4>
                     </div>
                 </div>
             </div>
@@ -232,14 +232,14 @@
                 <div class="col-md-6 layout_padding">
                     <div class="full paddding_left_15">
                         <div class="heading_main text_align_left">
-                           <h2><span class="theme_color">Apply for</span> Exchange</h2>    
+                           <h2><span class="theme_color">Enroll for</span> Services</h2>    
                         </div>
                     </div>
                     <div class="full paddding_left_15">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     </div>
                     <div class="full paddding_left_15">
-                        <a class="main_bt" href="#">Exchange ></a>
+                        <a class="main_bt" href="#">Learn more ></a>
                     </div>
                 </div>
             </div>
@@ -411,9 +411,9 @@
                                 <div class="footer_blog full white_fonts">
                              <h3>Contact us</h3>
                              <ul class="full">
-                               <li><img src="images/i5.png"><span>London 145<br>United Kingdom</span></li>
-                               <li><img src="images/i6.png"><span>demo@gmail.com</span></li>
-                               <li><img src="images/i7.png"><span>+12586954775</span></li>
+                               <li><img src="images/i5.png"><span>Saharanpur<br>Uttar Pradesh</span></li>
+                               <li><img src="images/i6.png"><span>taxbazaar.sre@gmail.com</span></li>
+                               <li><img src="images/i7.png"><span>+91 7983799864</span></li>
                              </ul>
                          </div>
                             </div>
@@ -429,7 +429,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <p class="crp">© Copyrights 2019 design by html.design</p>
+                    <p class="crp">TaxBazaar© Copyrights 2020</p>
                 </div>
             </div>
         </div>
