--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                     <div class="row">
                         <div class="col-sm-6 col-md-6 col-lg-3">
                             <div class="full">
-                              <!--  <img class="img-responsive" src="images/footer_logo.png" alt="#" />-->
+                              <img class="img-responsive" src="images/logo.png" alt="#" />
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-6 col-lg-3">
