--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="container">
                 <div class="row">
                     <div class="logo_section">
-                        <a class="navbar-brand" href="index.html"><img src="images/logo.png" width = "269px" alt="image"></a>
+                        <a class="navbar-brand" href="index.html"><img width = "269px" src="images/logo.png"  alt="image"></a>
                     </div>
                     <div class="site_information">
                         <ul>
