--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="pogoSlider" id="js-main-slider">
-                    <div class="pogoSlider-slide" style="background-image:url(images/slide_img.png);">
+                    <div class="pogoSlider-slide" style="background-image:url(images/slide_img1.png);">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
@@ -124,7 +124,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pogoSlider-slide" style="background-image:url(images/slide_img.png);">
+                    <div class="pogoSlider-slide" style="background-image:url(images/slide_img2.png);">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
@@ -156,7 +156,7 @@
                 <div class="col-md-6 layout_padding">
                     <div class="full paddding_left_15">
                         <div class="heading_main text_align_left">
-						   <h2><span class="theme_color">Welcome</span> To TaxBazaar/h2>	
+						   <h2><span class="theme_color">Welcome</span> To TaxBazaar</h2>	
                         </div>
                     </div>
                     <div class="full paddding_left_15">
