--- a/index.html
+++ b/index.html
@@ -160,7 +160,13 @@
                         </div>
                     </div>
                     <div class="full paddding_left_15">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                        <p>We are here only to solve your problems by providing you the platform of online / offline services related to*Loan*Pan card *GST*Income Tax*Balance Sheet*Projected Report*Accounting With E- Commerce Accounting*Superfast Accounting Complete Year with in 3 Days*.
+                        <b>*Money Back Guarantee 100%
+                           *Customer Satisfaction 100%
+                           *Accuracy 100%  
+                           *Fault 0%
+			   *Affordable Price </b>
+                         </p>
                     </div>
                     <div class="full paddding_left_15">
                         <a class="main_bt" href="#">About more ></a>
