--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     </div>
                     <div class="full paddding_left_15">
                         <p>We are here only to solve your problems by providing you the platform of online / offline services related to*Loan*Pan card *GST*Income Tax*Balance Sheet*Projected Report*Accounting With E- Commerce Accounting*Superfast Accounting Complete Year with in 3 Days*.
-                        <b>*Money Back Guarantee 100%
+                        <br/><b>*Money Back Guarantee 100%
                            *Customer Satisfaction 100%
                            *Accuracy 100%  
                            *Fault 0%
