--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="full services_blog">
                         <img class="img-responsive" src="images/s4.png" alt="#" />
-                        <h4>E-COMMERCE ACCOUNTING</h4>
+                        <h4>E-ACCOUNTING</h4>
                     </div>
                 </div>
             </div>
