--- a/index.html
+++ b/index.html
@@ -191,25 +191,25 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="full services_blog">
-                       <img class="img-responsive" src="images/s1.png" alt="#" />
+                       <img class="img-responsive" src="images/gst_1.png" alt="#" />
                        <h4>GST & ITR</h4>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="full services_blog">
-                        <img class="img-responsive" src="images/s2.png" alt="#" />
+                        <img class="img-responsive" src="images/pancard_1.png" alt="#" />
                         <h4>PAN CARD</h4>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="full services_blog">
-                        <img class="img-responsive" src="images/s3.png" alt="#" />
+                        <img class="img-responsive" src="images/book_1.png" alt="#" />
                         <h4>BOOKEEPING</h4>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="full services_blog">
-                        <img class="img-responsive" src="images/s4.png" alt="#" />
+                        <img class="img-responsive" src="images/account_1.png" alt="#" />
                         <h4>E-ACCOUNTING</h4>
                     </div>
                 </div>
