--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="container">
                 <div class="row">
                     <div class="logo_section">
-                        <a class="navbar-brand" href="index.html"><img width = "269px" src="images/logo.png"  alt="image"></a>
+                        <a class="navbar-brand" href="index.html"><img src="images/logo_1.png"  alt="image"></a>
                     </div>
                     <div class="site_information">
                         <ul>
@@ -380,7 +380,7 @@
                     <div class="row">
                         <div class="col-sm-6 col-md-6 col-lg-3">
                             <div class="full">
-                              <img class="img-responsive" src="images/logo.png" alt="#" />
+                              <img class="img-responsive" src="images/logo_1.png" alt="#" />
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-6 col-lg-3">
