--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                     </div>
                     <div class="site_information">
                         <ul>
-                            <li><a href="mailto:exchang@gmail.com"><img src="images/mail_icon.png" alt="#" />taxbazaar.sre@gmail.com</a></li>
-                            <li><a href="tel:exchang@gmail.com"><img src="images/phone_icon.png" alt="#" />+91 7983799864</a></li>
+                            <li><a href="mailto:taxbazaar.sre@gmail.com"><img src="images/mail_icon.png" alt="#" />taxbazaar.sre@gmail.com</a></li>
+                            <li><a href="tel:taxbazaar.sre@gmail.com"><img src="images/phone_icon.png" alt="#" />+91 7983799864</a></li>
                             <li><a class="join_bt" href="https://wa.me/qr/QRBWSLHRS4KMF1">Join us</a></li>
                         </ul>
 
@@ -116,9 +116,9 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="slide_text white_fonts">
-                                        <h3>Progress & Success<br><strong>Currency</strong></h3>
+                                        <h3>Your Problem, Our<br><strong>Solution </strong></h3>
                                         <br>
-                                        <a class="start_exchange_bt" href="exchange.html">Save Tax ></a>
+                                        <a class="start_exchange_bt" href="exchange.html">Book Now ></a>
                                     </div>
                                 </div>
                             </div>
@@ -129,9 +129,9 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="slide_text white_fonts">
-                                        <h3>Progress & Success<br><strong>Currency</strong></h3>
+                                        <h4>Get Free Consultation<br><strong>Call</strong></h4>
                                         <br>
-                                        <a class="start_exchange_bt" href="exchange.html">Save Tax ></a>
+                                        <a class="start_exchange_bt" href="exchange.html">Book Now ></a>
                                     </div>
                                 </div>
                             </div>
