--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <div class="slide_text white_fonts">
+                                    <div class="slide_text ">
                                         <h3>Your Problem, Our<br><strong>Solution </strong></h3>
                                         <br>
                                         <a class="start_exchange_bt" href="exchange.html">Book Now ></a>
@@ -128,7 +128,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <div class="slide_text white_fonts">
+                                    <div class="slide_text ">
                                         <h4>Get Free Consultation<br><strong>Call</strong></h4>
                                         <br>
                                         <a class="start_exchange_bt" href="exchange.html">Book Now ></a>
