--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="slide_text ">
-                                        <h3>Your Problem, Our<br><strong>Solution </strong></h3>
+                                        <h4>Your Problem, Our<br><strong>Solution </strong></h4>
                                         <br>
                                         <a class="start_exchange_bt" href="exchange.html">Book Now ></a>
                                     </div>
@@ -131,7 +131,7 @@
                                     <div class="slide_text ">
                                         <h4>Get Free Consultation<br><strong>Call</strong></h4>
                                         <br>
-                                        <a class="start_exchange_bt" href="exchange.html">Book Now ></a>
+                                        <h4><a class="start_exchange_bt" href="exchange.html">Book Now ></a></h4>
                                     </div>
                                 </div>
                             </div>
