--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="slide_text ">
-                                        <h4>Your Problem, Our<br><strong>Solution </strong></h4>
+                                        <h3>Your Problem, Our<br><strong>Solution </strong></h3>
                                         <br>
-                                        <a class="start_exchange_bt" href="exchange.html">Book Now ></a>
+                                        <a class="start_exchange_bt btn_warning" href="exchange.html">Book Now ></a>
                                     </div>
                                 </div>
                             </div>
@@ -129,9 +129,9 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="slide_text ">
-                                        <h4>Get Free Consultation<br><strong>Call</strong></h4>
+                                        <h3>Get Free Consultation<br><strong>Call</strong></h3>
                                         <br>
-                                        <h4><a class="start_exchange_bt" href="exchange.html">Book Now ></a></h4>
+                                        <a class="start_exchange_bt btn btn_warning " href="exchange.html">Book Now ></a>
                                     </div>
                                 </div>
                             </div>
