--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                     <div class="slide_text ">
                                         <h3>Get Free Consultation<br><strong>Call</strong></h3>
                                         <br>
-                                        <a class="start_exchange_bt btn btn_warning " href="exchange.html">Book Now ></a>
+                                        <a class=" btn btn_warning " href="exchange.html">Book Now ></a>
                                     </div>
                                 </div>
                             </div>
