--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="pogoSlider" id="js-main-slider">
-                    <div class="pogoSlider-slide" style="background-image:url(images/slide_img1.png);">
+                    <div class="pogoSlider-slide" style="background-image:url(images/home_1.png);">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
