--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="pogoSlider" id="js-main-slider">
-                    <div class="pogoSlider-slide" style="background-image:url(images/home_1.png);">
+                    <div class="pogoSlider-slide" style="background-image:url(images/slide_img1.png);">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
@@ -150,7 +150,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="full text_align_right_img">
-                        <img src="images/img1.png" alt="#" />
+                        <img src="images/home_1.png" alt="#" />
                     </div>
                 </div>
                 <div class="col-md-6 layout_padding">
