--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
     <!-- Site Metas -->
     <title>Tax Bazaar</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="Taxbazaar Saharanpur">
+    <meta name="description" content="Tax Consultant in saharanpur">
     <meta name="author" content="">
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="#" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favicon.png"  width="16" height="16" type="image/x-icon" />
     <link rel="apple-touch-icon" href="#" />
 
     <!-- Bootstrap CSS -->
