--- a/index.html
+++ b/index.html
@@ -137,6 +137,28 @@
                             </div>
                         </div>
                     </div>
+			<div class="pogoSlider-slide" style="background-image:url(images/slide_img3.png);">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="slide_text ">
+                                       
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+			<div class="pogoSlider-slide" style="background-image:url(images/slide_img4.png);">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="slide_text ">
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <!-- .pogoSlider -->
             </div>
