--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="pogoSlider" id="js-main-slider">
-                    <div class="pogoSlider-slide" style="background-image:url(images/slide_img1.png);">
+                    <div class="pogoSlider-slide" style="background-image:url(images/slide_img1.jpg);">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
@@ -124,7 +124,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pogoSlider-slide" style="background-image:url(images/slide_img2.png);">
+                    <div class="pogoSlider-slide" style="background-image:url(images/slide_img2.jpg);">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
@@ -137,7 +137,7 @@
                             </div>
                         </div>
                     </div>
-			<div class="pogoSlider-slide" style="background-image:url(images/slide_img3.png);">
+			<div class="pogoSlider-slide" style="background-image:url(images/slide_img3.jpg);">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
@@ -148,7 +148,7 @@
                             </div>
                         </div>
                     </div>
-			<div class="pogoSlider-slide" style="background-image:url(images/slide_img4.png);">
+			<div class="pogoSlider-slide" style="background-image:url(images/slide_img4.jpg);">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
