--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="ulockd-home-slider">
         <div class="container-fluid">
             <div class="row">
-                <div class="pogoSlider" id="js-main-slider">
+                <div class="pogoSlider" id="js-main-slider" height="500">
                     <div class="pogoSlider-slide" style="background-image:url(images/slide_img1.jpg);">
                         <div class="container">
                             <div class="row">
