--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     <div class="ulockd-home-slider">
         <div class="container-fluid">
             <div class="row">
-                <div class="pogoSlider" id="js-main-slider" height="100">
-                    <div class="pogoSlider-slide" style="background-image:url(images/slide_img1.jpg);">
+                <div class="pogoSlider" id="js-main-slider" >
+                    <div class="pogoSlider-slide" style="background-image:url(images/slide_img1.jpg);" height="300px">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
